# PIICrypt

./: .gitignore  README.md  main.py  pyproject.toml  recognizers_sample.yml
src/piicrypt/: __init__.py  cli.py  core.py  nlp.py  utils.py
