[project]
name = "piicrypt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "spacy>=3.8.7",
    "typer>=0.19.2",
]

[project.scripts]
pii-crypt = "piicrypt.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
